<?xml version="1.0"?>
<package>
  <name>diana_messenger</name>
  <version>0.1.0</version>
  <description>
    library for creating ROS listener and talker with qt bindings
  </description>
  <maintainer email="clynamen@gmail.com">Vincenzo Giovanni Comito</maintainer>
  <author>Alessandro Quaranta</author>
  <author>Davide Pala</author>
  <author>Stonier</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
